V 4.0.2 Fixed a bug with graphics causing other content to be a lower z-index

--- a/src/components/Contact/_contact.module.scss
+++ b/src/components/Contact/_contact.module.scss
@@ -12,6 +12,8 @@
 .content {
   width: 100%;
   max-width: var(--maxWidth);
+
+  z-index: 3;
 }
 
 .contentCentered {
