--- a/src/components/Experience/_experience.module.scss
+++ b/src/components/Experience/_experience.module.scss
@@ -15,4 +15,5 @@
 .textContainer {
   max-width: var(--maxWidth);
   width: 100%;
+  z-index: 3;
 }
